# forge

./: .gitignore  .secrets.baseline  AGENT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  security.yml  sync-docs.yml
docs/: README.md  introduction.mdx  quickstart.mdx  tutorial-colab-quickstart.mdx
docs/concepts/: playbook.mdx  recipe.mdx
examples/: README.md  sample_workload.jsonl
notebooks/: README.md  forge_quickstart.ipynb
playbooks/: default.md
src/aevyra_forge/: __init__.py  agent.py  bench.py  cli.py  config.py  kernel.py  llm.py  orchestrator.py  playbook.py  quant.py  recipe.py  result.py  runner.py  workload.py
src/aevyra_forge/adapters/: __init__.py
tests/: test_cli.py  test_playbook.py  test_recipe.py  test_result.py  test_workload.py
